--- a/formStyle.css
+++ b/formStyle.css
@@ -1,4 +1,13 @@
 li > a{ text-decoration: none;
+outline-style: solid;
+}
+
+li > a:hover {
+text-decoration: underline;
+}
+
+li > a:focus {
+text-decoration: underline;
 }
 
 li {
@@ -6,16 +15,18 @@ padding-top: 0.75em;
 padding-bottom:0.75em;
 }
 
-span {font-size: 0.875em;}
+span {font-size: 0.875em;
+padding-top: 0.25em;
+}
 
 
 #errLink { color: #0469c7; }
 
 .errorDiv {
-background-color: #0000ff;
+background-color: #f9e9e8;
 color: #333333;
 font-family: Helvetica;
-border-style: none;
+outline-style:none;
 }
 
 .errText {
@@ -25,8 +36,9 @@ color: #ca261a;
 
 #errBorder {
 background-color: #ca261a;
+color: #ca261a;
 width: 0.25em;
-border-style: none;
+height:100%;
 }
 
 
